# ssign

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTES.md  README.md  SECURITY.md  SYSADMIN.md  codemeta.json  env_signalp6.lock.txt  main.nf  nextflow.config  pyproject.toml  requirements-baseline.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml
colab/: README.md
conf/: base.config  hpc_pbs.config  hpc_slurm.config  modules.config  test.config
containers/: Dockerfile  README.md
containers/ssign-annotation/: Dockerfile
containers/ssign-base/: Dockerfile
containers/ssign-hhsuite/: Dockerfile
containers/ssign-plmblast/: Dockerfile
containers/ssign-structure/: Dockerfile
data/: README.md
docs/: configuration.md  design_decisions.md  installation.md  licensing.md  optional_tools.md  output.md  research_software_audit.md  usage.md
docs/explanation/: design_decisions.md  licensing.md  pipeline_overview.md
docs/how-to/: configure.md  install.md  run_on_hpc.md  troubleshooting.md
docs/reference/: cli.md  env_vars.md  output_files.md
docs/tutorials/: first_run.md
figures/: README.md
models/: README.md
modules/local/: blastp.nf  cross_validate.nf  deeplocpro.nf  deepsece.nf  detect_format.nf  enrichment_testing.nf  extract_gene_order.nf  extract_proteins.nf  foldseek.nf  generate_figures.nf  generate_report.nf  hhsuite.nf  integrate_annotations.nf  interproscan.nf  macsyfinder.nf  prodigal.nf  protparam.nf  proximity_analysis.nf  signalp.nf  system_filtering.nf  t5ss_handler.nf  validate_systems.nf
openspec/changes/deeplocpro-mega-protein-guard/: proposal.md  tasks.md
openspec/changes/effector-recovery-benchmark/: design.md  proposal.md  tasks.md
openspec/changes/enrichment-background-and-plme-default-off/: design.md
openspec/changes/runtime-eta-estimator/: tasks.md
openspec/changes/secretion-classifier-dataset/: design.md  proposal.md  tasks.md
openspec/specs/deeplocpro-length-guard/: spec.md
openspec/specs/enrichment-stats/: spec.md
openspec/specs/plme-prediction/: spec.md
openspec/specs/runtime-effort-model/: spec.md
openspec/specs/runtime-eta-online/: spec.md
research/secretion_classifier/: 00_overview.md  01_gap_validation.md  02_data_audit.md  03_architecture.md  04_negative_sets.md  README.md
research/secretion_classifier/scripts/: score_gap.py  submit_gap_validation.sh
results/: README.md
scripts/: README.md  analyse_k12_runs.py  audit_database_sizes.py  audit_disk_sizes.py  chop_genome.py  fetch_databases.sh  fetch_weights.sh  monitor_resources.py
scripts/cx3/: _list_usable_gpu_types.awk  run_batched_multi.pbs  run_k12_validation.pbs  run_serial_genomes.pbs  submit_all_gpus.sh  submit_batched_overnight.sh  submit_overnight.sh
src/ssign_app/: Home.py  __init__.py  cli.py
src/ssign_app/.streamlit/: config.toml
src/ssign_app/core/: _pool_utils.py  multi_runner.py  resource_sampler.py  runner.py
src/ssign_app/runtime/: __init__.py  coefficients.json  effort_model.py  estimator.py
src/ssign_app/scripts/: _plm_blast_embed_bootstrap.py  annotation_consensus.py  compute_protparam.py  cross_validate_predictions.py  dedup_sequences.py  detect_input_format.py  doctor.py  enrichment_testing.py  extract_gene_order.py  extract_neighborhood.py  extract_proteins.py  generate_figures.py  generate_report.py  integrate_annotations.py  map_gbff_to_bakta_cds.py  merge_plm_effector_outputs.py  (+19 more)
tests/: install_blast.sh  reinstall.sh  run_multi_test.sh  run_multi_test_local.sh  run_tutorial.sh  test_blast_installed.sh  test_dlp_timing.sh  test_dlp_timing50.sh  test_dtu_fileupload.py  test_dtu_full.py  test_dtu_submit.py  test_full_pipeline.sh  test_hhpred_4proteins.sh  test_hhpred_debug.py  test_hhpred_debug2.py  test_hhpred_quick.py  test_multi_genome.sh  test_multi_genome_full.py  test_multi_genome_full.sh  test_pipeline_e2e.py
tests/data/: test10.faa  test_samplesheet.csv  xan_mini.faa
tests/fixtures/: Xanthobacter_T5aSS_minimal.gbff  Xanthobacter_tagetidis_ATCC_700314_contig_87.gbff
tests/integration/: conftest.py  test_enrichment_stats_integration.py  test_imports.py  test_integrate_annotations_integration.py  test_macsyfinder_integration.py  test_pipeline_e2e_golden.py  test_pipeline_fixture.py  test_proximity_analysis_integration.py  test_quick_scripts_integration.py  test_run_bakta_integration.py  test_run_deeplocpro_integration.py  test_run_deepsece_integration.py  test_run_eggnog_integration.py  test_run_hhsuite_integration.py  test_run_interproscan_integration.py  test_run_plm_blast_integration.py  test_run_plm_effector_integration.py  test_run_signalp_integration.py
tests/unit/: _helpers.py  conftest.py  test_analyse_k12_runs.py  test_annotation_consensus.py  test_audit_database_sizes.py  test_audit_disk_sizes.py  test_cli.py  test_cli_run_subcommand.py  test_compute_protparam.py  test_cross_validate_predictions.py  test_dedup_sequences.py  test_detect_input_format.py  test_doctor.py  test_enrichment_testing.py  test_extract_gene_order.py  test_extract_neighborhood.py  test_extract_proteins.py  test_fasta_io.py  test_go_utils.py  test_hmmsearch_shim.py  test_home_sanitize.py  test_integrate_annotations.py  test_localization_gate.py  test_logging_config.py  test_manifest.py  test_map_gbff_to_bakta_cds.py  test_merge_plm_effector_outputs.py  test_multi_runner.py  test_pdb_utils.py  test_plm_blast_embed_bootstrap.py  test_plm_effector_feature_extraction.py  test_plm_effector_inference.py  test_plm_effector_predict_api.py  test_plm_effector_utils.py  test_pool_utils.py  test_prodigal_to_gene_info.py  test_proximity_analysis.py  test_resolve_taxonomy.py  test_resource_sampler.py  test_resources.py  (+25 more)
validation_sweeps/: .gitignore  README.md
validation_sweeps/benchmark/: .gitignore  README.md
workflows/: input_processing.nf  integration_reporting.nf  optional_annotation.nf  secreted_protein_prediction.nf  secretion_system_detection.nf  substrate_identification.nf
(+533 files in other folders)
