[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssign"
version = "0.9.0"
description = "Secretion-system Identification for Gram-negative bacterial genomes"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "M. Teo Reid", email = "t.reid25@imperial.ac.uk"},
    {name = "Owen Terpstra", email = "owen.terpstra@rug.nl"},
    {name = "Karan Kumar", email = "karan.kumar@rwth-aachen.de"},
    {name = "Sonja Billerbeck", email = "s.billerbeck@imperial.ac.uk"},
]
maintainers = [
    {name = "Sonja Billerbeck", email = "s.billerbeck@imperial.ac.uk"},
    {name = "M. Teo Reid", email = "t.reid25@imperial.ac.uk"},
]
keywords = [
    "bioinformatics",
    "secretion system",
    "gram-negative bacteria",
    "substrate prediction",
    "protein localization",
    "MacSyFinder",
    "DeepLocPro",
    "DeepSecE",
    "PLM-Effector",
    "SignalP",
    "bacterial genomics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "biopython>=1.80",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.10",
    "requests>=2.28",
    "pyyaml>=6.0",
    "macsyfinder>=2.1",
    "pyrodigal>=3.5",
    "pyhmmer>=0.10",
    "jinja2>=3.0",
    "networkx>=3.0",
    "taxopy>=0.12",
]

[project.optional-dependencies]
# Individual tool extras (pip install ssign[deepsece], etc.)
# v1.0.0 will promote deepsece + bakta into base deps per the install-tier
# decision (base tier = prediction + Bakta light). For now they remain
# optional to avoid breaking v0.9.0 workflows.
deepsece = [
    "deepsece",
    "fair-esm>=2.0",
    "torch>=2.0",
]
bakta = [
    "bakta>=1.5",
]
# Install tiers (pip-extras side of the 3-tier decision; database tier is
# picked separately via scripts/fetch_databases.sh --tier {base,extended,full}).
# 'extended' and 'full' have the same Python packages — the difference
# between them is which databases get downloaded.
extended = [
    "deepsece",
    "fair-esm>=2.0",
    "torch>=2.0",
    "bakta>=1.5",
    "eggnog-mapper",
    "goatools",
    "obonet",
    # transformers >=5.0 removes batch_encode_plus, breaking pLM-BLAST and
    # PLM-Effector; numpy >=2.0 removes np.issubsctype, breaking pLM-BLAST.
    # Both bounds verified via integration tests on 2026-04-29.
    "transformers>=4.38,<5.0",
    "numpy>=1.26,<2.0",
    "xgboost>=2.0",
    # Required at runtime by pLM-BLAST: protobuf for ProtT5 SentencePiece
    # tokenizer; mkl + mkl-service are direct imports in plmblast.py.
    "protobuf",
    "mkl",
    "mkl-service",
]
full = [
    "deepsece",
    "fair-esm>=2.0",
    "torch>=2.0",
    "bakta>=1.5",
    "eggnog-mapper",
    "goatools",
    "obonet",
    "transformers>=4.38,<5.0",
    "numpy>=1.26,<2.0",
    "xgboost>=2.0",
    "protobuf",
    "mkl",
    "mkl-service",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
ssign = "ssign_app.cli:main"
hmmsearch = "ssign_app.shims.hmmsearch:main"

[project.urls]
Homepage = "https://github.com/billerbeck-lab/ssign"
Documentation = "https://github.com/billerbeck-lab/ssign#readme"
Source = "https://github.com/billerbeck-lab/ssign"
Issues = "https://github.com/billerbeck-lab/ssign/issues"
Changelog = "https://github.com/billerbeck-lab/ssign/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ssign_app = ["assets/*", "scripts/*.py", "scripts/ssign_lib/*.py", "shims/*.py", ".streamlit/*"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
markers = [
    "integration: per-tool or whole-pipeline tests that require external tools to be installed. Skipped automatically when a tool or its database is missing. Run explicitly with `pytest -m integration`.",
]

[tool.ruff]
# Default 88 is too tight for the bioinformatics-style identifiers and
# embedded f-string error messages this codebase uses; 120 is a common
# modern choice that doesn't force constant line-wrapping of error
# strings, FRAGILE comments, or long fixture FASTA sequences.
line-length = 120

[tool.ruff.lint]
# Start permissive: pyflakes (F) catches real bugs, pycodestyle (E/W)
# catches obvious style issues. Import sorting (I), naming (N), and
# docstring rules (D) are deferred to Phase 6 (see plan).
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
# Scripts in src/ssign_app/scripts/ and bin/ use sys.path manipulation
# to import from ssign_lib before the rest of the imports — required
# because they run both as standalone scripts and as installed-package
# code. The mangling MUST happen before the ssign_lib import.
"src/ssign_app/scripts/*" = ["E402"]
"bin/*" = ["E402"]
# Streamlit GUI interleaves component imports with HTML/CSS rendering,
# and the user-facing text strings (st.warning, st.markdown) carry full
# GitHub URLs to docs which exceed 120 chars. Line-length doesn't carry
# the same maintenance cost in user-facing prose as in code.
"src/ssign_app/Home.py" = ["E402", "E501"]
