[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssign"
version = "0.9.0"
description = "Secretion-system Identification for Gram-negative bacterial genomes"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "M. Teo Reid", email = "t.reid25@imperial.ac.uk"},
    {name = "Owen Terpstra", email = "owen.terpstra@rug.nl"},
    {name = "Karan Kumar", email = "karan.kumar@rwth-aachen.de"},
    {name = "Sonja Billerbeck", email = "s.billerbeck@imperial.ac.uk"},
]
maintainers = [
    {name = "Sonja Billerbeck", email = "s.billerbeck@imperial.ac.uk"},
    {name = "M. Teo Reid", email = "t.reid25@imperial.ac.uk"},
]
keywords = [
    "bioinformatics",
    "secretion system",
    "gram-negative bacteria",
    "substrate prediction",
    "protein localization",
    "MacSyFinder",
    "DeepLocPro",
    "DeepSecE",
    "PLM-Effector",
    "SignalP",
    "bacterial genomics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "biopython>=1.80",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.10",
    "requests>=2.28",
    "pyyaml>=6.0",
    "macsyfinder>=2.1",
    "pyrodigal>=3.5",
    "pyhmmer>=0.10",
    "psutil>=5.9",
    "jinja2>=3.0",
    "networkx>=3.0",
    "taxopy>=0.12",
    # DeepSecE prediction is part of the base tier as of v1.0.0 — its
    # call complements DLP / SignalP on cross-validated secretion calls.
    # PyTorch and fair-esm together add ~3 GB to the install footprint.
    "deepsece",
    "fair-esm>=2.0",
    "torch>=2.0",
]

[project.optional-dependencies]
# Individual tool extras (pip install ssign[bakta], etc.).
# DeepSecE moved into base in v1.0.0; [deepsece] is kept as a no-op alias
# so existing `pip install ssign[deepsece]` invocations keep working.
deepsece = []
bakta = [
    "bakta>=1.10",
]
# Install tiers (pip-extras side of the 3-tier decision; database tier is
# picked separately via scripts/fetch_databases.sh --tier {base,extended,full}).
# 'extended' and 'full' have the same Python packages — the difference
# between them is which databases get downloaded.
extended = [
    "deepsece",
    "fair-esm>=2.0",
    "torch>=2.0",
    "bakta>=1.10",
    # eggnog-mapper is NOT in the pip extras: its hard pin
    # `biopython==1.76` is incompatible with `bakta>=1.10` (which
    # requires `biopython>=1.78`). Users who enable EggNOG annotation
    # install it separately, the same way ssign already treats
    # InterProScan, HH-suite, BLAST+, SignalP, and DeepLocPro. See
    # docs/how-to/install.md for the conda / pip --no-deps recipe.
    "goatools",
    "obonet",
    # transformers >=5.0 removes batch_encode_plus, breaking pLM-BLAST and
    # PLM-Effector; numpy >=2.0 removes np.issubsctype, breaking pLM-BLAST.
    # Both bounds verified via integration tests on 2026-04-29.
    # v1.x roadmap: revisit when upstream pLM-BLAST/PLM-Effector ships
    # transformers-5 + numpy-2 compatible code so we can drop the upper bound.
    "transformers>=4.38,<5.0",
    "numpy>=1.26,<2.0",
    "xgboost>=2.0",
    # Required at runtime by pLM-BLAST: protobuf for ProtT5 SentencePiece
    # tokenizer; mkl + mkl-service are direct imports in plmblast.py.
    "protobuf",
    "mkl",
    "mkl-service",
    # pLM-BLAST embedding + search direct imports (verified against upstream
    # source 2026-05-20). h5py in embedders/dataset.py; tqdm in every embedder
    # module; fairscale FSDP in embedders/esm.py; numba in scripts/plmblast.py
    # + alntools/numeric.py; sentencepiece is required by T5Tokenizer in
    # embedders/prottrans.py; accelerate is needed by transformers' HF model
    # loaders. alntools is NOT here — it's a sub-package of pLM-BLAST itself
    # (lives at pLM-BLAST/alntools/), not on PyPI; run_plm_blast.py sets
    # PYTHONPATH to the pLM-BLAST repo root so plmblast.py subprocess can
    # import it. Loose bounds — pLM-BLAST's own requirements.txt is
    # over-pinned and clobbers ssign's stack if installed directly.
    "h5py>=3.0",
    "tqdm>=4.65",
    "fairscale",
    "numba>=0.57",
    "sentencepiece",
    "accelerate",
]
full = [
    "deepsece",
    "fair-esm>=2.0",
    "torch>=2.0",
    "bakta>=1.10",
    # See [extended] above for why eggnog-mapper is not pinned here.
    "goatools",
    "obonet",
    "transformers>=4.38,<5.0",
    "numpy>=1.26,<2.0",
    "xgboost>=2.0",
    "protobuf",
    "mkl",
    "mkl-service",
    "h5py>=3.0",
    "tqdm>=4.65",
    "fairscale",
    "numba>=0.57",
    "sentencepiece",
    "accelerate",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "hypothesis>=6.100",
]

[project.scripts]
ssign = "ssign_app.cli:main"
hmmsearch = "ssign_app.shims.hmmsearch:main"

[project.urls]
Homepage = "https://github.com/billerbeck-lab/ssign"
Documentation = "https://github.com/billerbeck-lab/ssign#readme"
Source = "https://github.com/billerbeck-lab/ssign"
Issues = "https://github.com/billerbeck-lab/ssign/issues"
Changelog = "https://github.com/billerbeck-lab/ssign/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ssign_app = ["assets/*", "scripts/*.py", "scripts/ssign_lib/*.py", "shims/*.py", ".streamlit/*", "data/t5aSS/*.hmm"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
markers = [
    "integration: per-tool or whole-pipeline tests that require external tools to be installed. Skipped automatically when a tool or its database is missing. Run explicitly with `pytest -m integration`.",
]

[tool.coverage.run]
source = ["src/ssign_app/scripts"]
omit = [
    # Output-side modules — visual / formatting layers that are exercised
    # by integration tests and the golden-output E2E test, not unit tests.
    "src/ssign_app/scripts/generate_figures.py",
    "src/ssign_app/scripts/generate_report.py",
    # Vendored upstream PLM-Effector model code (MIT, zhengdd0422/PLM-Effector
    # — see plan addendum C). Tested at the boundary via predict_api.py
    # and the integration suite; we don't unit-test third-party model
    # internals.
    "src/ssign_app/scripts/plm_effector/ensemble.py",
    "src/ssign_app/scripts/plm_effector/feature_extraction.py",
    "src/ssign_app/scripts/plm_effector/inference.py",
    "src/ssign_app/scripts/plm_effector/models.py",
    "src/ssign_app/scripts/plm_effector/utils.py",
]

[tool.mypy]
# Bug-finder configuration. Type-annotation enforcement
# (`disallow_untyped_defs` / `disallow_untyped_calls`) is deliberately OFF
# — the v1.0.0 codebase pre-dates type hints and the goal here is to catch
# real bugs without a multi-week annotation-writing pass. `check_untyped_defs`
# is the key flag: mypy still inspects the bodies of untyped functions and
# reports type errors inside them.
python_version = "3.10"
files = ["src/ssign_app/scripts"]
# Vendored upstream PLM-Effector model code — same exclusion as coverage.
exclude = "src/ssign_app/scripts/plm_effector/"
check_untyped_defs = true
strict_equality = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
no_implicit_reexport = true

# Libraries without type stubs + our own sibling-import modules. Calls
# become `Any` at the import site — silences missing-import noise but
# loses call-site type-checking. Within-module checking still works
# (each ssign_lib module is type-checked when mypy walks files=).
# Stubs that ARE installed (pandas-stubs, types-requests, types-PyYAML,
# types-setuptools, types-networkx) are picked up automatically.
#
# Internal sibling imports (ssign_lib.*, dedup_sequences,
# annotation_consensus) appear here because the scripts use sys.path
# manipulation to import them as flat top-level modules at runtime,
# while mypy resolves them via the package path
# (ssign_app.scripts.ssign_lib.*) — same file, two names → collision.
# Listing them here is the pragmatic fix; per-call-site type-checking
# loss is acceptable for this codebase.
[[tool.mypy.overrides]]
module = [
    "annotation_consensus",
    "Bio.*",
    "biolib.*",
    "dedup_sequences",
    "DeepSecE.*",
    "esm",
    "extract_neighborhood",
    "goatools.*",
    "macsylib.*",
    "macsypy.*",
    "matplotlib.*",
    "obonet",
    "psutil",
    "pyrodigal",
    "scipy.*",
    "seaborn",
    "ssign_lib.*",
    "streamlit.*",
    "taxopy",
    "torch.*",
]
ignore_missing_imports = true

# pyhmmer ships .pyi stubs that occasionally contain syntax errors at
# upstream-release time (e.g. plan7.pyi:406 in pyhmmer 0.10.x has an
# `Expected an indented block` error). `ignore_missing_imports` does
# not help because the stub IS found — it's just unparseable. Skip
# following into pyhmmer entirely; call sites get typed as Any.
[[tool.mypy.overrides]]
module = ["pyhmmer.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.ruff]
# Default 88 is too tight for the bioinformatics-style identifiers and
# embedded f-string error messages this codebase uses; 120 is a common
# modern choice that doesn't force constant line-wrapping of error
# strings, FRAGILE comments, or long fixture FASTA sequences.
line-length = 120

[tool.ruff.lint]
# Start permissive: pyflakes (F) catches real bugs, pycodestyle (E/W)
# catches obvious style issues, isort (I) keeps imports tidy. Naming (N)
# and docstring rules (D) remain deferred — N would force a sweep across
# old code with `camelCase` left over from upstream tools, D would be a
# multi-week docstring-writing project.
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Scripts in src/ssign_app/scripts/ use sys.path manipulation to import
# from ssign_lib before the rest of the imports — required because they
# run both as standalone scripts and as installed-package code. The
# mangling MUST happen before the ssign_lib import.
"src/ssign_app/scripts/*" = ["E402"]
# Streamlit GUI interleaves component imports with HTML/CSS rendering,
# and the user-facing text strings (st.warning, st.markdown) carry full
# GitHub URLs to docs which exceed 120 chars. Line-length doesn't carry
# the same maintenance cost in user-facing prose as in code.
"src/ssign_app/Home.py" = ["E402", "E501"]
# conftest.py hoists scripts/ onto sys.path before any test-file imports
# from it; test_hmmsearch_shim.py does the same for shims/. Both
# legitimately import after sys.path mutation.
"tests/unit/conftest.py" = ["E402"]
"tests/unit/test_hmmsearch_shim.py" = ["E402"]
# Log-line fixtures in this file are deliberately literal copies of
# real ssign run output; splitting them across Python source lines
# obscures what the test is checking.
"tests/unit/test_analyse_k12_runs.py" = ["E501"]
# torch is imported via pytest.importorskip BEFORE the package import,
# so the package import legitimately appears after a module-level
# statement. Same pattern as other test files in this list.
"tests/unit/test_plm_effector_feature_extraction.py" = ["E402"]
